--- a/manifest.json
+++ b/manifest.json
@@ -6,5 +6,17 @@
   "background_color": "#ffffff",
   "theme_color": "#667eea",
   "description": "Suivi personnel Amor Fati - évalue et suis ton évolution vers l'acceptation",
-  "lang": "fr-FR"
+  "lang": "fr-FR",
+  "icons": [
+    {
+      "src": "/icons/icon-192.svg",
+      "sizes": "192x192",
+      "type": "image/svg+xml"
+    },
+    {
+      "src": "/icons/icon-512.svg",
+      "sizes": "512x512",
+      "type": "image/svg+xml"
+    }
+  ]
 }
