fix(pwa): use relative sw precache paths, set manifest start_url, add placeholder favicon.ico

--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Amor Fati Tracker",
   "short_name": "AmorFati",
-  "start_url": ".",
+  "start_url": "/AmorFati/",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#667eea",
