--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -2,9 +2,10 @@ name: Lighthouse Audit
 
 on:
   push:
-    branches: [ 'feature/cleaning' ]
+    branches: [ 'main' ]
   pull_request:
-    branches: [ 'feature/cleaning' ]
+    branches: [ 'main' ]
+  workflow_dispatch: {}
 
 jobs:
   lighthouse:
