--- a/manifest.json
+++ b/manifest.json
@@ -7,17 +7,9 @@
   "theme_color": "#667eea",
   "description": "Suivi personnel Amor Fati - évalue et suis ton évolution vers l'acceptation",
   "lang": "fr-FR",
+  "orientation": "portrait",
+  "categories": ["lifestyle", "productivity"],
   "icons": [
-    {
-      "src": "icons/icon-192.svg",
-      "sizes": "192x192",
-      "type": "image/svg+xml"
-    },
-    {
-      "src": "icons/icon-512.svg",
-      "sizes": "512x512",
-      "type": "image/svg+xml"
-    },
     {
       "src": "icons/icon-192.png",
       "sizes": "192x192",
@@ -28,6 +20,11 @@
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
+    },
+    {
+      "src": "icons/icon-180.png",
+      "sizes": "180x180",
+      "type": "image/png"
     }
   ]
 }
